<resources>

    <string name="app_name">Photosynthese</string>

    <!-- Main Activity -->
    <string name="headline_active_events">ACTIVE EVENTS</string>
    <string name="headline_future_events">FUTURE EVENTS</string>
    <string name="headline_memory_box">MEMORY BOX</string>
    <string name="eventInfo_title">copy event id into clipboard:</string>
    <string name="close">close</string>

    <string name="create_event">create new event</string>
    <string name="add_existing_event">add existing event</string>

    <string name="add_existing_event_dialog">add existing event:</string>
    <string name="event_id">event id</string>
    <string name="add_event">add event</string>

    <string name="copy_event_id">copy event id</string>
    <string name="leave_event">leave event</string>
    <string name="delete_event">delete event</string>
    <string name="change_timetable">change timetable</string>
    <string name="event_details">show event details</string>
    <string name="change_eventpicture">change event picture</string>

    <string name="content_description_profile_picture">profile picture</string>
    <string name="content_description_card_image">event picture</string>
    <string name="content_description_ic_event_settings">event settings</string>

    <!-- Toasts for adding an new user to an event -->
    <string name="toast_event_not_fount">event could not be found</string>
    <string name="toast_already_registerd">already registered</string>
    <string name="toast_successfully_registered">successfully registered</string>
    <string name="toast_error_joining">error while joining event</string>


    <!-- Change timetable dialog -->
    <string name="endPostingDate">end of posting time</string>
    <string name="apply">apply changes</string>
    <string name="inputError_time">the event has to end after the start\nplease choose suitable times</string>

    <!-- Event Activity Toolbar -->
    <string name="content_description_icon_add">add</string>
    <string name="content_description_icon_profile">profile</string>

    <!-- Create event Activity -->
    <string name="headline_create_event">create new event</string>
    <string name="placeholder_event_name">event name</string>
    <string name="placeholder_date">date</string>
    <string name="placeholder_time">time</string>
    <string name="placeholder_description">description (optional)</string>
    <string name="location">location</string>
    <string name="send_button">create event</string>
    <string name="optional">optional settings</string>
    <string name="startDate">start time of event</string>
    <string name="startPostingDate">start of posting time</string>
    <string name="startPostingDateLong">start posting time\n(Default value: event start time)</string>
    <string name="stopPostingDate">end of event</string>
    <string name="stopPostingDateLong">end of event\n(Default value: 12 hours after event start)</string>
    <string name="inputError_EventName">please enter an event name!</string>
    <string name="ok">OK</string>
    <string name="placeholder_location">location (optional)</string>

    <!-- Event Detail Fragment -->
    <string name="time_table">time table</string>
    <string name="description">description</string>
    <string name="content_description_ic_back">back</string>

    <!-- Post Menu -->
    <string name="download">download</string>
    <string name="delete">delete</string>

    <!-- Event Gallery Fragment -->
    <string name="no_results">no results</string>
    <string name="username">username</string>
    <string name="date">date</string>
    <string name="media_saved">media saved to gallery</string>
    <string name="media_saved_error">error while saving media to gallery</string>

    <!-- Onboarding -->
    <string name="welcome">welcome to photosynthese</string>
    <string name="welcome_text">You can create events and invite your friends to join them. During the event you can share your photos and videos with your friends. After the event you can look back at the shared media and relive the event.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="no_account">do not have an account? </string>
    <string name="already_account">already have an account? </string>
    <string name="email_username">username/email</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="login_successful">login successful</string>
    <string name="login_failed">login failed</string>
    <string name="invalid_email">please enter a valid email address</string>
    <string name="invalid_confirm_password">passwords do not match</string>
    <string name="invalid_password">password must be at least 6 characters long</string>
    <string name="all_fields">please fill out all fields</string>
    <string name="username_taken">username already taken</string>
    <string name="user_created">user created</string>
    <string name="logout">logout</string>
    <string name="confirm">confirm</string>
    <string name="profile_update">profile updated</string>
    <string name="profile_update_failed">profile update failed</string>
    <string name="permissions_failed">permissions not granted by the user</string>
    <string name="send">send</string>

</resources>