<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageButton
        android:id="@+id/dialog_close_button"
        android:layout_width="@dimen/xlarge"
        android:layout_height="@dimen/xlarge"
        android:src="@drawable/ic_close_24"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_existing_event_dialog"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dialog_copy_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/medium"
            app:cardCornerRadius="@dimen/small">

            <EditText
                android:id="@+id/input_event_id"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                android:hint="@string/event_id"/>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_event_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/skyblue"
            android:text="@string/add_event"
            android:textAllCaps="false"
            android:textColor="@color/background" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>